Fix alignment issues and clean up CSS

--- a/styles.css
+++ b/styles.css
@@ -12,28 +12,31 @@ body, html{
 
 .mainContainer{
     display: flex;
-    align-items: center;
+    justify-content: center;
     background-color: rgba(250,250,250,255);
     min-height: 100vh;
     width: 100%;
     position: relative;
-    padding: 30px;
     gap: 60px;
     overflow: hidden;
 }
 
 .parentContainer{
     justify-content: space-between;
-    width: 50%;
+    width: 70%;
+    height: 80%;
+    position: relative;
 
 }
 
 .sideBar{
-    width: 100px;
-    height: 70%;
-    background-color: red;
-    border-top-right-radius:100px;
-    border-bottom-right-radius: 100px;
+    width: 500px;
+    height: 90vh;
+    background-color: rgba(189,64,254,255);
+    padding: 0;
+    border-bottom-left-radius: 500px;
+    border-bottom-right-radius: 500px;
+    position: relative;
 }
 
 .rightSide{
@@ -46,17 +49,19 @@ body, html{
     position: absolute;
     left: 50%;
     top: 50%;
-    width: 25rem;
+    width: 20rem;
+    height: 70vh;
     transform: translate(-50%, -50%);
-    background-color: white;
+    background-color: #F5F3F8;
     border-radius: 25px;
     overflow: hidden;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .header{
+    display: flex;
     background-color: rgba(189,64,254,255);
-    color: black;
+    color: white;
     padding: 20px;
     border-top-left-radius: 25px;
     border-top-right-radius: 25px;
@@ -68,29 +73,65 @@ body, html{
         border-radius: 50%;
         margin-bottom: 10px;
     }
+
+    h2{
+        font-size: 20px;
+        margin-left: 10px;
+        font-weight: 600;
+        line-height: 1.5;
+    }
+
+    p{
+        font-size: 15px;
+        margin-left: 10px;
+        font-weight: 400;
+        
+    }
 }
 
 .chatBody{
     padding: 20px;
 }
 
-.chatOne p, .responseOne p, .chatTwo > p {
-    /* background: #f0f0f0; */
-    color: rgba(236,227,246,255);
+.chat2{
+    display: flex;
+    flex-direction: column;
+
+}
+
+.responseOne{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+
+    p{
+    color: #D8D3DC;
+    justify-content: flex-end;
+    }
+}
+
+.chatOne p, .chatTwo > p {
+    background-color: #f0f0f0;
+    color: rgb(188, 105, 247);
     padding: 10px;
     margin-bottom: 10px;
     border-radius: 10px;
     max-width: 80%;
-    font-size: 20px;
+    font-size: 16px;
 }
 
-.imgFlex img{
-    /* display: flex;
-    justify-content: flex-end; */
-    width: 5rem;
-    height: 5rem;
-    border-radius: 10px;
-    object-fit: cover;
+.imgFlex {
+    display: flex;
+    justify-content: flex-end;
+    gap: 5px;
+    margin-bottom: 10px;
+
+    img{
+        width: 3rem;
+        height: 3rem;
+        border-radius: 15px;
+        object-fit: cover;
+    }
     
 }
 
@@ -108,7 +149,6 @@ body, html{
 
 .placeholder input[type="text"] {
     border: none;
-    /* background: transparent; */
     outline: none;
     flex: 1;
     padding: 8px;
